make the next valid version
